--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/sta940/elderly-care-api#readme",
   "dependencies": {
     "@babel/register": "^7.17.0",
+    "aws-sdk": "^2.1083.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "sequelize": "^6.16.1",
