--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
+    "pdf-creator-node": "^2.3.4",
     "sequelize": "^6.16.1",
     "sequelize-cli": "^6.4.1",
     "util": "^0.12.4"
