--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "admin",
     "password": "22102018",
-    "database": "test",
+    "database": "elderlyCare",
     "host": "database-1.ccsc3woghdpy.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
